# ProcesamientoImagenes

FaceRecogntion/: .gitignore  README.md  settings.gradle.kts
FaceRecogntion/app/: build.gradle.kts
FaceRecogntion/app/src/main/: AndroidManifest.xml
FaceRecogntion/app/src/main/cpp/: CMakeLists.txt  FaceDetector.cpp  FaceDetector.h  MyPCA.cpp  MyPCA.h  native-lib.cpp
FaceRecogntion/app/src/main/java/com/example/facerecognition/: MainActivity.kt
FaceRecogntion/app/src/main/res/layout/: activity_main.xml
FaceRecogntion/gradle/wrapper/: gradle-wrapper.properties
conversorImagenes/: Readme.md  camara.cpp  convertir.cpp
tallerColor/: CMakeLists.txt  Readm.md  ej1_rgb_hsv.cpp  ej2_saturacion.cpp  ej3_kmeans.cpp  ej4_grayworld.cpp  ej6_gamma.cpp  ej7_vignette.cpp
tallerConsolidado/: CMakeLists.txt  main.cpp
tallerConsolidado/include/: gaussian_workshop.h
tallerConsolidado/src/: gaussian_workshop.cpp
tallerConvex/: CMakeLists.txt  README.md  main.cpp
tallerConvex/include/: converter.h
tallerConvex/src/: converter.cpp
tallerFiltros/: CMakeLists.txt  readme.md
tallerFiltros/include/: filters.h  utils.h
tallerFiltros/src/: canny.cpp  gray.cpp  laplacian.cpp  log.cpp  main.cpp  scharr.cpp  sobel_magnitude.cpp  utils.cpp  zero_crossing.cpp
tallerFondo/: CMakeLists.txt  readme.md
tallerFondo/include/: frame_diff.h  gmm_segmenter.h
tallerFondo/src/: frame_diff.cpp  gmm_segmenter.cpp  main_frame_diff.cpp  main_gmm.cpp
tallerGeometria/: CMakeLists.txt  README.md  main.cpp
tallerGeometria/include/: geometria.h
tallerGeometria/src/: circulos.cpp  lineas.cpp  poligonos.cpp  procesamiento.cpp  puntos_vectores.cpp  transformaciones.cpp
